--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+
+# Visual Studio Code cache/options directory
+.vscode/
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -54,6 +58,9 @@ nunit-*.xml
 [Dd]ebugPS/
 [Rr]eleasePS/
 dlldata.c
+
+# CMake builded project
+build/
 
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
